2004-03-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Add "Color" to the arguments available for -list.

2004-03-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh (PACKAGE_CHANGE_DATE): Updated version to 1.1Beta3
	* magick/nt_base.c (NTSystemComman): Have not been successful with using
	MsgWaitForMultipleObjects() reliably, so back out usage of it for
	now.
	* magick/fx.c (ConvolveImage): Support convolution in CMYK
	colorspace.

2004-03-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh (PACKAGE_CHANGE_DATE): Update release to 1.1Beta2.
	* magick/constitute.c (ReadImage): Ignore errors of type
	ConfigureError when loading modules so that error report can still
	report the familiar "No delegate for this image format" message
	while still being able to report problems with loading a module if
	it was found.  This is a compromise which reports useless messages
	when the modules are not found at all, but I can't think of a way
	around it.
	* magick/nt_base.c (NTSystemComman): Adjust
	MsgWaitForMultipleObjects() arguments to wait for object to be
	signaled only (FALSE) rather wait for object to be signaled as
	well as an input event received(TRUE).  It seems that process
	status changes do not result in an input event, so the call was
	deadlocking.
	* magick/constitute.c (ReadImage): If module loading reported an
	error, ReadImage immediately returned an error rather than trying
	to use a delegate defined by delegates.mgk.

2004-03-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: Updated version to 1.1Beta1

2004-03-24  Mike Chiarappa  <mikechiarappa@libero.it>

	* BCBMagick/magick/libMagick.bpr: updated to latest source modifications.
	* BCBMagick/magick/GM_Magick.bpr: updated to latest source modifications.

2004-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/plasma.c (ReadPlasmaImage): srand() is already invoked by
	InitializeMagick() so don't call it here.