@@ -13,6 +13,7 @@ Immediate Bugs
  o Under Windows, Magick++ exceptions do not have the exception ID codes
    translated correctly.  Apparent failure of FormatMessage() in locale.c.
  o SegmentImage is producing black images in some cases.
+ o Double free observed with 'gm display -geometry "1280x1024!" image.tiff'.
 
 For Next Release
 ===============
